# UUIDs

./: CMakeLists.txt  README.md  UUIDs.bat  UUIDs.pc.in  UUIDs.pro  install.bat  main.cpp  settings.bat
Html/en/: index.html
PHP/: UUIDs.php
Qt/: UUIDs.pro
SRCs/: Convoy.cpp  PrivateConvoy.cpp  SRCs.pri  nDestroyer.cpp  nEnabler.cpp
SRCs/Windows/: PrivateConvoy.cpp  PrivateEnabler.cpp  PrivateUUIDs.hpp
docs/: index.html
docs/css/: stardate.css
docs/tw/: index.html
include/: UUIDs.hpp  include.pri
projects/: index.xml
scripts/: install.bat  windows.bat  x64.bat  x86.bat
